; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/cmd/extr_cmd.c_MyDuplicateHandle.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/cmd/extr_cmd.c_MyDuplicateHandle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DUPLICATE_SAME_ACCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @MyDuplicateHandle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @MyDuplicateHandle(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = call i32 (...) @GetCurrentProcess()
  store i32 %8, i32* %7, align 4
  %9 = load i32, i32* %7, align 4
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* @DUPLICATE_SAME_ACCESS, align 4
  %15 = call i32 @DuplicateHandle(i32 %9, i32 %10, i32 %11, i32 %12, i32 0, i32 %13, i32 %14)
  ret i32 %15
}

declare dso_local i32 @GetCurrentProcess(...) #1

declare dso_local i32 @DuplicateHandle(i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
